added ramda and a npm react module with assets

--- a/app/index.ejs
+++ b/app/index.ejs
@@ -18,7 +18,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/icon-180x180.png">
 
     <link rel="stylesheet" href="https://use.typekit.net/hww5ora.css">
-
+    <link rel="stylesheet" href="carousel.css"/>
+   
     <link rel="icon" href="/favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
 
